--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     </intent>
 </queries>
    <application
-        android:label="twitter_hackathon"
+        android:label="Liber: Hands-Free Social Media"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
