--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,10 +52,19 @@ dependencies:
   build_runner: ^2.2.0
   drift: ^2.0.2
   alan_voice: ^3.6.0
+  google_fonts: ^3.0.1
+  faker: ^2.0.0
+
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,7 +72,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -81,6 +89,7 @@ flutter:
     - assets/images/support2.gif
     - assets/images/support3.gif
     - assets/images/logo.png
+    - assets/images/privacy.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
